2005-07-01  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getAcceleratorForeground.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getAcceleratorSelectedForeground.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getBlack.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControl.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlDarkShadow.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlDisabled.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlHighlight.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlInfo.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlShadow.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlTextColor.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlTextFont.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getDescription.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getDesktopColor.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getFocusColor.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getHighlightedTextColor.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getID.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getInactiveControlTextColor.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getInactiveSystemTextColor.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getMenuBackground.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getMenuDisabledForeground.java: new tests;
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getMenuForeground.java: new tests;