@@ -1,0 +1,66 @@
+// Tags: JDK1.2
+
+// Copyright (C) 2005 David Gilbert <david.gilbert@object-refinery.com>
+
+// Mauve is free software; you can redistribute it and/or modify
+// it under the terms of the GNU General Public License as published by
+// the Free Software Foundation; either version 2, or (at your option)
+// any later version. 
+
+// Mauve is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License
+// along with Mauve; see the file COPYING.  If not, write to
+// the Free Software Foundation, 59 Temple Place - Suite 330,
+// Boston, MA 02111-1307, USA.  */
+
+package gnu.testlet.javax.swing.JTable;
+
+import gnu.testlet.TestHarness;
+import gnu.testlet.Testlet;
+
+import java.util.Arrays;
+
+import javax.swing.JTable;
+import javax.swing.event.TableModelListener;
+import javax.swing.table.DefaultTableModel;
+
+/**
+ * Some checks for the setModel() method in the {@link JTable} class.
+ */
+public class setModel implements Testlet {
+
+  /**
+   * Runs the test using the specified harness.
+   * 
+   * @param harness  the test harness (<code>null</code> not permitted).
+   */
+  public void test(TestHarness harness)      
+  {
+    harness.checkPoint("setModel(TableModel)");
+    DefaultTableModel m1 = new DefaultTableModel();
+    JTable t = new JTable(m1);
+    DefaultTableModel m2 = new DefaultTableModel();
+    t.setModel(m2);
+    TableModelListener[] listeners1 = m1.getTableModelListeners();
+    TableModelListener[] listeners2 = m2.getTableModelListeners();
+    harness.check(!Arrays.asList(listeners1).contains(t));
+    harness.check(Arrays.asList(listeners2).contains(t));
+    
+    // try a null argument
+    boolean pass = false;
+    try
+    {
+      t.setModel(null);   
+    }
+    catch (IllegalArgumentException e)
+    {
+      pass = true;   
+    }
+    harness.check(pass);
+  }
+
+}
